<resources>
    <string name="app_name">beat-store</string>
    <string name="title_activity_btm">MainActivity</string>
    <string name="title_discover">Discover</string>
    <string name="title_search">Search</string>
    <string name="title_play">Play</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_cart">Cart</string>
    <string name="title_activity_nav">MainActivity</string>
    <string name="title_profile">Profile</string>
</resources>