<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/nav_discover"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/nav_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_notifications1"
        android:icon="@drawable/ic_baseline_play_circle_outline_24"
        android:title="@string/title_play" />
>
    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/nav_heart"
        android:title="@string/title_favorites" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/nav_cart"
        android:title="@string/title_cart" />

</menu>